--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="col-md-12 alert alert-danger" role="alert"
-      *ngIf="register.value.password != register.value.confirmPassword">
+         *ngIf="register.value.password != register.value.confirmPassword">
       Password does not match!
     </div>
 
@@ -80,7 +80,7 @@
       <label class="col-md-4 col-form-label">Gender:</label>
       <div class="col-md-12">
         <div class="form-check">
-          <input class="form-check-input" type="radio" formControlName="gender" id="male" value="male">
+          <input class="form-check-input" type="radio" formControlName="gender" id="male" value="male" [checked]="true">
           <label class="form-check-label" for="male">
             Nam
           </label>
@@ -110,7 +110,7 @@
     </div>
     <div class="form-control-row">
       <div class="col-md-12 text-center">
-        <button type="submit" class="btn btn-primary m-3">Submit</button>
+        <button type="submit" class="btn btn-primary m-3" [disabled]="register.invalid">Submit</button>
         <button (click)="clear()" class="btn btn-danger m-3">Reset</button>
       </div>
     </div>
